tests/semantic/pass/selection_statement_block_scope4.c
int main(void) {
  if (0) {
    int a;
    if (1) {
      a = 1;
    } else {
      a = 2;
      int a;
    }
    a = 0;
  }
}
