tests/semantic/fail/adressof_adressof.c
int main(void) {
  int a;
  if (&(&a)) {
    return 0;
  }
  return 0;
}
